# multigames

./: .gitignore  alembic.ini  multigame.py  multigames.db  pyproject.toml  run.py
accounts/: __init__.py  accounts.csv  class_database.py  class_person.py  custom_error.py  settings.py
config/: log_setting.toml
control/: class_command.py  database.py  dungeon_and_dragon.py
database/: __init__.py  core.py
database/migrations/versions/: 2f82577f0e45_added_account_table.py
database/models/: __init__.py  user.py
docs/: almbic.md  log.md
games/: dungeon_and_dragon.py
helper/: __init__.py  captions.py  class_command.py  exc.py  loading.py
kernel/: dungeon_and_dragon.py  multigame.py
log/: log.md
model/: __init__.py  core.py
model/migrations/: env.py
model/models/: user.py
painless/: design_patterns.py
painless/descriptors/: register.py
view/: dungeon_and_dragon.py  login.py  multigame.py  register.py  select_games.py
